<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="shraddha.com.daminisportsapp.RulesActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20000dp">

        <TextView
            android:id="@+id/mksss_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/mksss_title" />

        <TextView
            android:id="@+id/bnca_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mksss_title"
            android:layout_centerHorizontal="true"
            android:text="@string/bnca_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bnca_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bnca_name_title"
            android:layout_centerHorizontal="true"
            android:text="@string/bnca_address" />

        <TextView
            android:id="@+id/rules_thug_war_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bnca_address"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:text="@string/rules_thug_war_title"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rules_thug_war"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/rules_thug_war_title"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="20dp"
            android:text="@string/rules_thug_war" />

        <TextView
            android:id="@+id/rules_chess_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rules_thug_war"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="49dp"
            android:text="@string/rules_chess_title"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/rules_chess_title"
            android:layout_marginTop="18dp"
            android:text="@string/rules_chess" />

        <TextView
            android:id="@+id/rules_ppt_presentation_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:text="@string/rules_ppt_presentation_title"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/topics_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rules_thug_war"
            android:layout_alignStart="@+id/rules_thug_war"
            android:layout_below="@+id/rules_ppt_presentation_title"
            android:layout_marginTop="18dp"
            android:text="Topics"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/topics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rules_chess_title"
            android:layout_alignStart="@+id/rules_chess_title"
            android:layout_alignTop="@+id/topics_title"
            android:text="@string/ppt_topics" />

        <TextView
            android:id="@+id/rules_ppt_presentation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/topics_title"
            android:layout_alignStart="@+id/topics_title"
            android:layout_below="@+id/topics_title"
            android:layout_marginTop="29dp"
            android:text="@string/rules_ppt_presentation" />

        <TextView
            android:id="@+id/rules_cricket_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rules_ppt_presentation"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:text="@string/rules_cricket_title"
            android:textStyle="bold"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/rules_cricket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rules_ppt_presentation"
            android:layout_alignStart="@+id/rules_ppt_presentation"
            android:layout_below="@+id/rules_cricket_title"
            android:layout_marginTop="30dp"
            android:text="@string/rules_cricket" />

        <Button
            android:id="@+id/rules_yogasana_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rules_cricket"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:text="@string/rules_yogasana_title" />

        <Button
            android:id="@+id/rules_suryanamaskar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rules_yogasana_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="59dp"
            android:text="@string/rules_suryanamskar_title" />


    </RelativeLayout>

</ScrollView>
