<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7B68EE"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="shraddha.com.daminisportsapp.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ImageView
        android:id="@+id/sports_image"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        app:srcCompat="@drawable/daminihomepage"
        android:layout_alignBottom="@+id/app_info"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/app_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="41dp"
        android:text="@string/app_info"
        android:textColor="#FAF8FB"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_above="@+id/register_button"
        android:layout_alignLeft="@+id/sports_image"
        android:layout_alignStart="@+id/sports_image" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/sports_image"
        android:layout_alignStart="@+id/sports_image"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_button"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/app_info"
        android:layout_alignEnd="@+id/app_info"
        android:layout_marginRight="33dp"
        android:layout_marginEnd="33dp" />

    <ImageView
        android:id="@+id/daminilogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/daminilogo"
        android:layout_above="@+id/sports_image"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/host_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/host_name"
        android:textColor="#FAF8FB"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/mkss_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mkss"
        android:textColor="#FAF8FB"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />


</RelativeLayout>
